--- a/src/PartsUnlimited.WebJobs.UpdateProductInventory/PartsUnlimited.WebJobs.UpdateProductInventory.csproj
+++ b/src/PartsUnlimited.WebJobs.UpdateProductInventory/PartsUnlimited.WebJobs.UpdateProductInventory.csproj
@@ -7,17 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PartsUnlimited.Models\PartsUnlimited.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Core" Version="3.0.0-beta3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.0' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="PartsUnlimited.Models">
+      <HintPath>..\PartsUnlimited.Models\bin\Debug\netcoreapp2.0\PartsUnlimited.Models.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
