--- a/test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
+++ b/test/PartsUnlimited.UnitTests/PartsUnlimited.UnitTests.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0-preview-20170914-09" />
     <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PartsUnlimitedWebsite\PartsUnlimitedWebsite.csproj" />
+    <ProjectReference Include="..\..\src\PartsUnlimited.Models\PartsUnlimited.Models.csproj" />
   </ItemGroup>
 
 </Project>
