removed python precompile

--- a/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
+++ b/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
@@ -36,8 +36,10 @@
   </ItemGroup>
 
   <Target Name="PrecompileScript" BeforeTargets="BeforeBuild">
+    <!--
     <Exec Command="npm install python2" />
-    <Exec Command="npm install --loglevel=error" />
+    <Exec Command="npm install -/-loglevel=error" />
+    -->
     <Exec Command="grunt" />
   </Target>
 
