--- a/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
+++ b/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
@@ -39,7 +39,8 @@
     <!--
     <Exec Command="npm install python2" />
     <Exec Command="npm install -/-loglevel=error" />
-    -->
+   -->
+    <Exec Command="npm install grunt"/>
     <Exec Command="grunt" />
   </Target>
 
